# DockerSandbox

./: .gitignore  CMakeLists.txt  README.md  docker-bake.hcl
.github/workflows/: build-bake.yml
ci/: build.sh  dockerfile
src/: main.cc  main.cpp
src/math/: calculator.cpp  calculator.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp
